# BlackHoleSimulation

./: CMakeLists.txt  README.md
Shaders/: double_fragment_shader.glsl  fragment_shader.glsl  new_fragment_shader.glsl  vertex_shader.glsl
src/: fragment_shader.glsl  main.cpp  relativity_frag_shader.glsl
